<resources>
    <string name="app_name">Didattica Mobile</string>
    <string name="tvWelcome_text">Benvenuto!</string>
    <string name="tvDoLogin_text">Effettua il Login</string>
    <string name="tvDoRegistration_text">Oppure Registrati</string>
    <string name="btnLogin_text">Login</string>
    <string name="btnRegistration_text">Iscriviti</string>
    <string name="etUsername_text">Username</string>
    <string name="etPassword_text">Password</string>
    <string name="tvRegistration_text">Registrazione</string>
    <string name="tvInsertData_text">Inserisci i tuoi dati:</string>
    <string name="etName_text">Nome</string>
    <string name="etSurname_text">Cognome</string>
    <string name="etFiscalCode_text">Codice Fiscale</string>
    <string name="toastNotInsertedField_text">Tutti i campi sono obbligatori</string>
    <string name="toastNameNotValidRegistration_text">Inserire nome e cognome validi</string>
    <string name="toastNotSpacesAllowed_text">I campi non possono contenere spazi</string>
    <string name="error_dialog_title">Error</string>
    <string name="ok_dialog_button">OK</string>
    <string name="noInternetConnectionException_message">Le funzionalità dell\'App richiedono una connessione Internet attiva.</string>
    <string name="registrationAuthorizationException_message">Nessuna corrispondenza per il codice fiscale inserito.</string>
    <string name="usernameConflictException_message">Username già esistente.</string>
    <string name="conflictException_message">Risorsa già esistente.</string>
    <string name="authorizationException_message">Non disponi dei permessi necessari.</string>
    <string name="expiredTokenException_message">Sessione scaduta. Premere OK per effettuare nuovamente il login.</string>
    <string name="temporaryUnavailableException_message">Il servizio non è al momento disponibile.</string>
    <string name="internalException_message">Errore interno.</string>
    <string name="loginAuthorizationException_message">Username o password errati.</string>
    <string name="btnCoursesHome_message">Gestione Corsi</string>
    <string name="btnAddCourse_message">Aggiungi\nCorso</string>
    <string name="tvAddCourseInformation_message">Inserisci le informazioni sul corso:</string>
    <string name="etCourseName_message">Nome Corso</string>
    <string name="etDepartmentName_message">Nome Dipartimento</string>
    <string name="btnContinueAddCourse_message">Avanti</string>
    <string name="tvInsertSchedule_message">Inserisci l\'orario del corso</string>
    <string name="etRoom_message">Aula</string>
    <string name="tvAddCourseDescription_message">Inserisci il programma del corso</string>
    <string name="btnAddCourseConfirm_message">Conferma</string>
    <string name="toastCourseInfoNotValid_text">Inserire informazioni valide</string>
    <string name="monday">Lunedì</string>
    <string name="tuesday">Martedì</string>
    <string name="wednesday">Mercoledì</string>
    <string name="thursday">Giovedì</string>
    <string name="friday">Venerdì</string>
    <string name="saturday">Sabato</string>
    <string name="searchTypeName">Nome</string>
    <string name="searchTypeTeacher">Docente</string>
    <string name="tvCourseSearchType_text">Criterio di ricerca</string>
    <string name="btnFindCourse_text">Cerca</string>
    <string name="etFindCourse_text">Cerca…</string>
    <string name="noMatchingCoursesEception_message">Nessun corso soddisfa i criteri di ricerca specificati</string>
    <string name="tvCourseDetailNameLabel_text">Nome</string>
    <string name="tvCourseDetailDepartmentLabel_text">Dipartimento</string>
    <string name="tvCourseDetailTeacherLabel_text">Docente</string>
    <string name="tvCourseDetailYearLabel_text">Anno Accademico</string>
    <string name="tvCourseDetailSemesterLabel_text">Semestre</string>
    <string name="tvCourseDetailDescriptionLabel_text">Descrizione</string>
    <string name="tvCourseDetailScheduleLabel_text">Orario</string>
    <string name="courseDetailSubscribtionCompleted_text">Iscrizione al corso completata</string>
    <string name="existentSusbcriptionException_message">Risulti già iscritto</string>
    <string name="courseCreationConfirm_message">Corso creato</string>
    <string name="btnCourseDetailExams_text">Esami</string>
    <string name="tvExamsTitle_text">Esami di</string>
    <string name="btnExamsAddExam_text">Aggiungi Esame</string>
    <string name="tvInsertExamInfos_text">Inserisci le informazioni sull\'esame:</string>
    <string name="tvCall_text">Seleziona l\'appello:</string>
    <string name="tvAddExamDate_text">Data:</string>
    <string name="tvAddExamStartTime_text">Ora Inizio:</string>
    <string name="tvAddExamRoom_text">Aula:</string>
    <string name="tvAddExamExpDate_text">Data scadenza prenotazione:</string>
    <string name="notValidExamDate_message">La data di scadenza deve essere successiva a quella odierna e precedente a quella dell\'esame</string>
    <string name="createdExam_message">Esame Creato</string>
    <string name="noMatchingExamsEception_message">Nessun esame presente per il corso selezionato</string>
    <string name="btnSubscribe_text">Iscriviti</string>
    <string name="exit_dialog_title">Uscita</string>
    <string name="exit_confirmation_message">Premi OK se desideri uscire dall\'applicazione</string>
    <string name="operation_not_confirmed_button">Annulla</string>
    <string name="tvDialogReserveExamCallLabel_text">Appello:</string>
    <string name="tvDialogReserveExamDateLabel_text">Data:</string>
    <string name="tvDialogReserveExamRoomLabel_text">Aula:</string>
    <string name="tvDialogReserveExamExpirationDateLabel_text">Scadenza:</string>
    <string name="btnDialogReserveExamReserve_text">Prenota</string>
    <string name="examReservationSuccess_message">Prenotazione effettuata con successo</string>
    <string name="tvActivityExamsNoFoundExams_text">Al momento non ci sono esami registrati</string>
    <string name="tvYourCorses_text">I tuoi corsi:</string>
    <string name="tvCoursesNoFound_text">Al momento non hai corsi registrati</string>
    <string name="notAllowedExamReservationException_message">Per poterti prenotare devi essere iscritto al corso</string>
    <string name="btnCourseDetailSubscribe_text">Iscriviti</string>
    <string name="btnCourseDetailUnsubscribe_text">Annulla Iscrizione</string>
    <string name="courseDetailUnsubscribtionCompleted_text">Annullamento Iscrizione completato</string>
    <string name="btnTeachingMaterialHome_text">Materiale Didattico</string>
    <string name="tvTeachingMaterialTitle_text">Materiale Didattico:</string>
    <string name="tvNotCoursesSubscribedTeachingMaterial_text">Per visualizzare il materiale didattico\ndevi essere iscritto almeno ad un corso</string>
    <string name="tvTeachingMaterialFor">Materiale Didattico per</string>
    <string name="tvNoMaterialToShowForCourse_text">Nessun file presente per il corso selezionato</string>
    <string name="notVisualizableElementByBrowser_message">Elemento non visualizzabile dal Browser</string>
    <string name="InsertValidMail_message">Inserisci una mail valida</string>
    <string name="tvCourseNotificationHeader_text">Avviso per il corso di</string>
    <string name="btnCourseNotificationSend_text">Pubblica</string>
    <string name="courseNotificationEmptyMessage_message">Inserisci un messaggio da pubblicare</string>
    <string name="courseNotificationConfirm_message">Avviso Pubblicato</string>
</resources>
