<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_orange_light">

    <android.support.constraint.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/tvDialogReserveExamCallLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvDialogReserveExamCallLabel_text"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <TextView
        android:id="@+id/tvDialogReserveExamCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="1"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvDialogReserveExamCallLabel"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <TextView
        android:id="@+id/tvDialogReserveExamDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvDialogReserveExamDateLabel_text"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogReserveExamCallLabel" />

    <TextView
        android:id="@+id/tvDialogReserveExamDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="13/04/2019 11:30"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvDialogReserveExamDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogReserveExamCallLabel" />

    <TextView
        android:id="@+id/tvDialogReserveExamRoomLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvDialogReserveExamRoomLabel_text"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogReserveExamDateLabel" />

    <TextView
        android:id="@+id/tvDialogReserveExamRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="B13"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvDialogReserveExamRoomLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogReserveExamDateLabel" />

    <TextView
        android:id="@+id/tvDialogReserveExamExpirationDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvDialogReserveExamExpirationDateLabel_text"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogReserveExamRoomLabel" />

    <TextView
        android:id="@+id/tvDialogReserveExamExpirationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="13/03/2019"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tvDialogReserveExamExpirationDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogReserveExamRoomLabel" />

    <Button
        android:id="@+id/btnDialogReserveExamReserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/btnDialogReserveExamReserve_text"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/guideline47"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogReserveExamExpirationDateLabel" />

    <ProgressBar
        android:id="@+id/pbLoadingDialogReserveExam"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline45"
        app:layout_constraintEnd_toStartOf="@+id/guideline47"
        app:layout_constraintStart_toStartOf="@+id/guideline46"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />
</android.support.constraint.ConstraintLayout>